--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
@@ -26,11 +27,17 @@
   },
   "dependencies": {
     "expo": "^23.0.4",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-navigation": "^1.0.0-beta.26",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.0.0",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^2.4.0",
-    "tcomb-form-native": "^0.6.11",
-    "prop-types":"^15.6.0"
+    "tcomb-form-native": "^0.6.11"
   }
 }
